# structured_MAS_rep_pkg

./: ARTIFACT_EVALUATION.md  ARTIFACT_VERSION.txt  CITATION.cff  CONTRIBUTING.md  DATA_AVAILABILITY.md  Dockerfile.analysis  MANIFEST.txt  Makefile  PUBLISHING_CHECKLIST.md  README.md  REPRODUCIBILITY.md  RESULTS.md  RUN_ORDER.md  SHA256SUMS.txt  pyproject.toml
configs/: README.md  analysis_mock.yaml  development_frozen_v3_qwen3b.yaml  faults_mock.yaml  pilot_mock.yaml  prepare_secvuleval.yaml
data/metadata/: dataset_checksums.json  exclusion_log.json  preparation_summary.json
docs/: ANNOTATION_GUIDE.md  FINAL_PROTOCOL.md  RESULTS_AUDIT_CHECKLIST.md
docs/archive/: ORIGINAL_PROTOCOL.md  PRE_REGISTRATION_TEMPLATE.md
environment/: README.md  requirements-analysis.txt  requirements-generation.txt
notebooks/: replication_walkthrough.ipynb
paper/: README.md  SHA256SUMS.txt  SUBMISSION_CHECKLIST.md  main.tex  references.bib
paper/data/: RESULTS_SUMMARY.md  rq1_effectiveness.csv  rq1_pair_correctness.csv  rq2_structured_handoffs.csv
paper/figures/: workflows.tex
paper/sections/: 01-introduction.tex  02-related-work.tex  03-study-design.tex  04-results.tex  05-discussion.tex  06-threats.tex  07-conclusion.tex
results/clean/: README.md  hard_pairs.csv  incorrect_records.csv  record_level_results.csv  rq1_efficiency.csv
results/verification/: clean_cochran_q.csv  clean_pairwise_mcnemar.csv  (+9 more)
sample_data/: synthetic_pairs.jsonl
scripts/: __init__.py  analyze_results.py  filter_eligible_pairs.py  pin_hf_revisions.py  run_rq3_corrected.py  verify_artifact.py
(+22 files in other folders)
