[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulhandoff"
version = "1.0.0"
description = "Reproducible experiments for evidence handoffs in multi-agent vulnerability analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Muhammad Umar Zeshan"}]
dependencies = [
  "pydantic>=2.7,<3",
  "PyYAML>=6.0,<7",
  "numpy>=1.26,<3",
  "pandas>=2.1,<4",
  "scipy>=1.11,<2",
  "scikit-learn>=1.4,<2",
  "statsmodels>=0.14,<1",
  "matplotlib>=3.8,<4",
  "tqdm>=4.66,<5",
  "datasets>=2.20,<5",
  "huggingface-hub>=0.24,<2",
  "transformers>=4.44,<5",
  "accelerate>=0.33,<2",
  "bitsandbytes>=0.43,<1",
  "json-repair>=0.25,<1",
  "sentencepiece>=0.2,<1",
  "safetensors>=0.4,<1",
  "nbformat>=5.10,<6",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2,<10",
  "pytest-cov>=5.0,<7",
]
vllm = ["vllm>=0.6,<1"]

[project.scripts]
vulhandoff = "vulhandoff.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 110
